...
            layer.borderColor = UIColor.systemGray5.cgColor
        } else {
            layer.borderColor = UIColor.systemRed.cgColor
        }
    }

    /// Overwriting delegate function to close keyboard when hitting 'return'
    func textFieldShouldReturn(_ textField: UITextField) -> Bool {
        self.resignFirstResponder()
        return false
    }
    
    /// Overwriting main function in order to increase padding for textfield
...
